[package]
name = "x86"
version = "0.31.0"
authors = [
  "Gerd Zellweger <mail@gerdzellweger.com>",
  "Eric Kidd <git@randomhacks.net>",
  "Philipp Oppermann <dev@phil-opp.com>",
  "Dan Schatzberg <schatzberg.dan@gmail.com>",
  "John Ericson <John_Ericson@Yahoo.com>",
  "Rex Lunae <rexlunae@gmail.com>",
  "Brian Martin <bmartin@twitter.com>",
  "Caleb Boylan <calebboylan@gmail.com>",
  "Nikolay Edigaryev <edigaryev@gmail.com>",
  "Stefan Lankes <stlankes@users.noreply.github.com>",
  "Jonathan Klimt <jonathan.klimt@rwth-aachen.de>"
]

description = "Library to program x86 (amd64) hardware. Contains x86 specific data structure descriptions, data-tables, as well as convenience function to call assembly instructions typically not exposed in higher level languages."

homepage = "https://github.com/gz/rust-x86"
repository = "https://github.com/gz/rust-x86"
documentation = "https://docs.rs/x86"
readme = "README.md"
keywords = ["ia32", "os", "amd64", "x86", "x86-64"]
license = "MIT"
build = "build.rs"
edition = '2018'

[features]
performance-counter = ["phf", "phf_codegen", "csv", "serde_json"]
# Note we have to choose between regular tests and x86test at the moment, so we use features
# (limitation in https://github.com/rust-lang/rust/issues/50297)
# Run user-space tests, i.e. regular #[test]
utest = []
# Run VM tests, i.e., the #[x86test] ones
vmtest = []

[[test]]
name = "kvm"
path = "tests/kvm/bin.rs"

[build-dependencies]
phf_codegen = { version = "0.7", optional = true }
csv = { version = "1.0.7", optional = true }
serde_json = { version = "1.0.39", optional = true }

[dependencies]
bitflags = "1.*"
bit_field = "0.10.0"
raw-cpuid = "7.0.*"

[dependencies.phf]
version = "0.7.7"
optional = true
features = ["core"]

[target.'cfg(target_family = "unix")'.dev-dependencies]
klogger = { version = "0.0.4", features = ["use_ioports"] }
x86test = { version = "0.0.2" }
libc = "0.2.*"

