[package]
name = "x86test-types"
version = "0.0.3"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]

repository = "https://github.com/gz/rust-x86"
documentation = "https://docs.rs/x86test-types"

keywords = ["vm", "os", "amd64", "kvm", "x86-64"]
license = "MIT OR Apache-2.0"
edition = '2018'

description = """
Common types for x86test runnter and the x86test procedural macro. 
"""

[dependencies]
x86 = "0.32"
